--- a/template/index.html
+++ b/template/index.html
@@ -18,7 +18,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li >
-                        <a href="#">Sample Page</a>
+                        <a href="page.html">Page</a>
                     </li>
                 </ul>
             </div>
