--- a/template/page.html
+++ b/template/page.html
@@ -57,16 +57,27 @@
 
                     <h2 class="title">Sample Page</h2>
                     <div class="post-info-top">
-                        <span id="addcomment"><a href="#respond" rel="nofollow" title="Leave a comment ?">Leave a comment</a> (0)</span>
-                        <span id="gotocomments"><a href="#comments" rel="nofollow" title="Go to comments ?">Go to comments</a></span>
+                        <span id="addcomment"><a href="#respond" rel="nofollow" title="Leave a comment">Leave a comment</a></span>
+                        <span id="gotocomments"><a href="#comments" rel="nofollow" title="Go to comments">Go to comments</a></span>
                     </div>
                     <div class="clear"></div>
                     <div class="entry">
                         <blockquote>
-                            <p>Hi there! I’m a bike messenger by day, aspiring actor by 
-                                night, and this is my blog. I live in Los Angeles, have a great dog 
-                                named Jack, and I like piña coladas. (And gettin’ caught in the rain.)
-                            </p>
+                            <p>
+                                <div align="right">
+                                <table class="heb">
+                                    <tr class="scripture">
+                                        <td>בְּרֵאשִׁ֖ית</td>
+                                    </tr>
+                                    <tr class="phonetics">
+                                        <td>brashith</td>
+                                    </tr>
+                                    <tr class="traslate">
+                                        <td>no princípio</td>
+                                    </tr>
+                                </table>
+                                </div>
+                            </p>                            
                         </blockquote>
                         <p class="p">…or something like this:</p>
                         <blockquote>
