proto-projeto com symfony

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -94,16 +94,14 @@ hr{color:#ddd;background-color:#ddd;height:1px;border:0px;}
 #content,#content_ns{overflow:hidden;float:left;width:640px;padding:0;}
 .LorR #content{float:right;}
 #content_ns,.LorR #content_ns{float:none;width:960px;}
+#page{margin-bottom:30px}
 .page-title{margin:0 0 20px;background:#eee;border:1px solid #ccc;}
 .page-title h1{font-size:18px;height:30px;line-height:30px;padding:5px 10px;border:1px solid #fff;}
 .page-title-paged{font-weight:normal;color:#999;}
 
+
 /* #post */
-.post{position:relative;width:640px;margin:0 0 10px;padding:0;}
-.post_ns{width:960px;}
-.post-single{margin:0;}
-.post-page{margin:0;border-bottom:1px solid #fff;}
-.post-page-nocomment{border-bottom:none;}
+
 h2.title{border-bottom:1px solid #fafafa;font-size:16px;text-shadow:0 1px 0 #fff,1px 2px 2px #aaa;margin:0;padding:2px 10px;color:#345;}
 h2.title a{color:#345;}
 h2.title a:hover{color:#4a630f;}
@@ -132,6 +130,9 @@ h2.title a:hover{color:#4a630f;}
 .comment-text th{background:#edeff0;}
 .entry blockquote,
 .comment-text blockquote{color:#555;padding:10px;margin:0 0 0px;border-bottom:0px solid #ddd;background:#eee;}
+
+.blockquote {color:#000;padding:10px;margin:0 0 0px;border-bottom:0px solid #ddd;background:#eee;}
+.noblockquote {color:#000;padding:10px;margin:0 0 0px;border-bottom:0px solid #ddd;}
 
 .p{color:#555;padding:10px;margin:0 0 0px;border:0px solid #ddd;}
 
@@ -169,11 +170,7 @@ h2.sticky-h2 a{color:#ff4e00;}
 #rss_wrap{float:left;position:relative;right:50%;top:0;height:22px;border:1px solid #ccc;}
 .rss_wrap{height:20px;padding:0 5px 0 10px;color:#464646;border:1px solid #fff;background-color:#f7f7f7;}
 .rss_wrap a{float:left;width:20px;height:20px;line-height:20px;margin-right:5px;text-indent:-9999em;}
-.rss_wrap a.rss{background:url("../images/icons.gif") no-repeat -60px 0;}
-.rss_wrap a.rss_text{width:auto;text-indent:20px;}
-.rss_wrap a.facebook{background:url("../images/icons.gif") no-repeat -20px 0;}
-.rss_wrap a.twitter{background:url("../images/icons.gif") no-repeat -40px 0;}
-.rss_wrap a.googleplus{background:url("../images/icons.gif") no-repeat 0 0;}
+
 /* #sidebar */
 #sidebar{overflow:hidden;width:276px;border:1px solid #fff;padding:20px 10px 10px;}
 #sidebar a{color:#555;text-shadow:0 1px 0 #fafafa;}
@@ -188,6 +185,7 @@ h2.sticky-h2 a{color:#ff4e00;}
 #sidebar ul li{padding-left:15px;background:url("../images/icons.gif") no-repeat 0 -280px;}
 #sidebar ul li:hover{background:url("../images/icons.gif") no-repeat -10px -260px;}
 #sidebar ul ul{padding:0;border-top:none;}
+
 /* widget */
 #sidebar .widget input#s{width:190px;height:22px;line-height:22px;padding:0 5px;}
 #sidebar .widget input#searchsubmit{width:65px;}
@@ -200,7 +198,7 @@ h2.sticky-h2 a{color:#ff4e00;}
 
 
 /* #footer */
-#footer{margin:20px auto 0;background:#454546;height:50px;bottom: 0; display: none}
+#footer{margin:20px auto 0;background:#454546;height:50px;bottom: 0;}
 #footer-inside{width:640px;margin:0 auto;padding:5px 320px 5px 0;color:#aaa;}
 #footer-inside a{border-bottom:1px dashed #aaa;color:#aaa;}
 #footer-inside #back-to-top{position:absolute;top:5px;right:150px;line-height:20px;color:#fafafa;font-weight:bold;}
@@ -208,7 +206,7 @@ h2.sticky-h2 a{color:#ff4e00;}
 #footer-inside #back-to-top a:hover{color:#f7f7f7;}
 
 .scripture {font-weight: bold; font-size:16px}
-.phonetics {font-size: 12px}
+.phonetics {font-size: 12px;color:#555}
 .traslate {font-size: 12px;color: green}
 
 .heb{text-align: right}
