--- a/template/page.html
+++ b/template/page.html
@@ -2,7 +2,7 @@
 <html  dir="ltr" lang="en-US">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>	  ISO	</title>
+        <title>ISO</title>
         <link rel="stylesheet" id="admin-bar-css" href="css/admin-bar.css" type="text/css" media="all" />
         <link rel="stylesheet" id="admin-bar-css" href="css/style.css" type="text/css" media="all" />
         <style type="text/css" media="screen">
@@ -53,7 +53,7 @@
                 <div class="clear"></div>
             </div>
             <div id="content">
-                <div class="post-2 page type-page status-publish hentry post post-page" id="post-2"><!-- post div -->
+                <div  id="page"><!-- post div -->
 
                     <h2 class="title">Sample Page</h2>
                     <div class="post-info-top">
@@ -62,32 +62,66 @@
                     </div>
                     <div class="clear"></div>
                     <div class="entry">
-                        <blockquote>
-                            <p>
-                                <div align="right">
+              
+                                <div class="blockquote" align="right">
                                 <table class="heb">
                                     <tr class="scripture">
-                                        <td>בְּרֵאשִׁ֖ית</td>
+                                       <td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td>
                                     </tr>
                                     <tr class="phonetics">
-                                        <td>brashith</td>
+                                        <td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td>
                                     </tr>
                                     <tr class="traslate">
-                                        <td>no princípio</td>
+                                        <td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td>
+                                    </tr>
+                                </table>
+                                </div>                                        
+            
+                 
+                                <div class="noblockquote" align="right">
+                                <table class="heb">
+                                    <tr class="scripture">
+                                        <td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td>
+                                    </tr>
+                                    <tr class="phonetics">
+                                        <td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td>
+                                    </tr>
+                                    <tr class="traslate">
+                                        <td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td>
                                     </tr>
                                 </table>
                                 </div>
-                            </p>                            
-                        </blockquote>
-                        <p class="p">…or something like this:</p>
-                        <blockquote>
-                            <p>The XYZ Doohickey Company was founded in 1971, and has 
-                                been providing quality doohickies to the public ever since. Located in 
-                                Gotham City, XYZ employs over 2,000 people and does all kinds of awesome
-                                things for the Gotham community.
-                            </p>
-                        </blockquote>
-                         <p class="p">…or something like this:</p>
+                       
+           
+                         
+                                <div class="blockquote" align="right">
+                                <table class="heb">
+                                    <tr class="scripture">
+                                        <td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td>
+                                    </tr>
+                                    <tr class="phonetics">
+                                        <td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td>
+                                    </tr>
+                                    <tr class="traslate">
+                                        <td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td>
+                                    </tr>
+                                </table>
+                                </div>
+                             
+                     
+                            <div class="noblockquote" align="right">
+                                <table class="heb">
+                                    <tr class="scripture">
+                                        <td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td><td>בְּרֵאשִׁ֖ית</td>
+                                    </tr>
+                                    <tr class="phonetics">
+                                        <td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td><td>brashith</td>
+                                    </tr>
+                                    <tr class="traslate">
+                                        <td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td><td>no princípio</td>
+                                    </tr>
+                                </table>
+                                </div>
                     </div><!-- END entry -->
 
                 </div><!-- END post -->	
@@ -203,7 +237,7 @@
                     <a href="http://zww.me/" title="designed by zwwooooo">zBench</a> | Powered by 
                     <a href="http://wordpress.org/">WordPress</a> 
                 </p>
-                <span id="back-to-top">↑ <a href="#" rel="nofollow" title="Back to top">Topo</a></span>
+                <span>↑ <a href="#" rel="nofollow" title="Back to top">Topo</a></span>
             </div>
         </div><!--footer-->
 
